# gitmoji_hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  prepare-commit-msg  pyproject.toml
git_hooks/: add_merge_prefix.py  commit-msg  prepare-commit-msg
